syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.example.grpc.user";

enum UserRole {
  USER = 0;
  ADMIN = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  optional UserRole userRole = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  bool isUserCreated = 2;
  string accessToken = 3;
  string refreshToken = 4;
  string message = 5;
  optional User user = 6;
}

message GoogleLoginRequest {
  string id_token = 1;
}

enum AuthProvider {
  LOCAL = 0;
  GOOGLE = 1;
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  UserRole role = 5;
  AuthProvider auth_provider = 7;
  bool is_deleted = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message GetUsersRequest{
  optional int32 pageNo = 1;
  optional int32 pageSize = 2;
  optional string sortBy = 3;
  optional string sortDirection = 4;
}

message GetUsersResponse{
  repeated User users = 1;
  int32 totalPages = 2;
  int64 totalElements = 3;
  int32 pageNo = 4;
  int32 pageSize = 5;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  int64 id = 1;
  bool success = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LogoutUserRequest {
  int64 id = 1;
}

message LogoutUserResponse{
  bool success = 1;
  string message = 2;
}

service UserService {
  rpc createUser(CreateUserRequest) returns (User);
  rpc userLogin(LoginRequest) returns (LoginResponse);
  rpc googleLogin(GoogleLoginRequest) returns (LoginResponse);
  rpc getUserById(GetUserByIdRequest) returns (User);
  rpc getUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc deleteUserById(DeleteUserRequest) returns (DeleteUserResponse);
  rpc refreshTokens(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc logoutUser(LogoutUserRequest) returns (LogoutUserResponse);
}
